<resources>
    <string name="app_name">kz.iitu.chatapp</string>
    <string name="log_in_button">Log in</string>
    <string name="don_t_have_an_account_sign_up_hint">Don\'t have an account? Sign up!</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="send_button">send</string>
    <string name="email_edit_text_hint">email</string>
    <string name="password_edit_text_hint">password</string>
    <string name="name_edit_text_hint">name</string>
    <string name="surname_edit_text_hint">surname</string>
</resources>
