<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/padding"
    tools:context=".SignUpActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        >


        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text_sign_up"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/padding_left_edit_text"
                android:layout_height="@dimen/layout_height_sign_up"
                android:hint="@string/email_edit_text_hint"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text_bg"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text_sign_up"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/padding_left_edit_text"
                android:layout_marginTop="@dimen/margin_top_input"
                android:layout_height="@dimen/input_height"
                android:hint="@string/password_edit_text_hint"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text_bg"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text_sign_up"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/padding_left_edit_text"
                android:layout_marginTop="@dimen/margin_top_input"
                android:layout_height="@dimen/input_height"
                android:hint="@string/name_edit_text_hint"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text_bg"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surname_edit_text_sign_up"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/padding_left_edit_text"
                android:layout_marginTop="@dimen/margin_top_input"
                android:layout_height="@dimen/input_height"
                android:hint="@string/surname_edit_text_hint"
                android:textColorHint="@color/black"
                android:background="@drawable/edit_text_bg"
                tools:ignore="HardcodedText" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sign_up_button_sign_up_activity"
            android:layout_width="@dimen/layout_width_sign_up"
            android:layout_marginTop="@dimen/margin_top_input"
            android:layout_height="@dimen/button_height"
            android:text="@string/sign_up_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_button"
            android:layout_gravity="right"
            android:background="@drawable/button_bg"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
</LinearLayout>